--- a/src/pug/includes/portfolio-modal-1.pug
+++ b/src/pug/includes/portfolio-modal-1.pug
@@ -9,9 +9,9 @@
                     .col-lg-8
                         .modal-body
                             // Project details
-                            h2.text-uppercase Project Name
+                            h2.text-uppercase Game
                             p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
-                            img.img-fluid.d-block.mx-auto(src='assets/img/portfolio/1.jpg', alt='...')
+                            img.img-fluid.d-block.mx-auto(src='https://images.unsplash.com/photo-1593118247619-e2d6f056869e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80', alt='...')
                             p Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!
                             ul.list-inline
                                 li
