--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Agency - Start Bootstrap Theme
+        title AdvanCore Corp
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -36,27 +36,27 @@ html(lang='en')
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.text-uppercase.ms-auto.py-4.py-lg-0
                         li.nav-item
-                            a.nav-link(href='#services') Services
+                            a.nav-link(href='#services') Servicios
                         li.nav-item
                             a.nav-link(href='#portfolio') Portfolio
                         li.nav-item
-                            a.nav-link(href='#about') About
+                            a.nav-link(href='#about') Nosotros
                         li.nav-item
-                            a.nav-link(href='#team') Team
+                            a.nav-link(href='#team') Equipo
                         li.nav-item
-                            a.nav-link(href='#contact') Contact
+                            a.nav-link(href='#contact') Contacto
         // Masthead
         header.masthead
             .container
-                .masthead-subheading Welcome To Our Studio!
-                .masthead-heading.text-uppercase It's Nice To Meet You
-                a.btn.btn-primary.btn-xl.text-uppercase(href='#services') Tell Me More
+                .masthead-subheading AdvanCore
+                .masthead-heading.text-uppercase Corp
+                a.btn.btn-primary.btn-xl.text-uppercase(href='#services') Negociar
 
         // Services
         section#services.page-section
             .container
                 .text-center
-                    h2.section-heading.text-uppercase Services
+                    h2.section-heading.text-uppercase Servicios
                     h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
                 .row.text-center
                     .col-md-4
@@ -205,11 +205,11 @@ html(lang='en')
                     li.timeline-inverted
                         .timeline-image
                             h4
-                                | Be Part
+                                | Se Parte
                                 br
-                                | Of Our
+                                | De nuestra
                                 br
-                                | Story!
+                                | Historia!
 
         // Team
         section#team.page-section.bg-light
@@ -221,7 +221,7 @@ html(lang='en')
                     .col-lg-4
                         .team-member
                             img.mx-auto.rounded-circle(src='https://scontent.fbog17-2.fna.fbcdn.net/v/t39.30808-6/315019908_109592198631856_5884267608688461482_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeH6cO_QTwRCrc3Pd3CEFHZYrsjL9W7BYb2uyMv1bsFhvQqTPdQEgPt1pFXAAExIj3fQC3oqf7TuQzMZ719V-RHe&_nc_ohc=NXtMdKwXsJYAX_U_BDW&_nc_zt=23&_nc_ht=scontent.fbog17-2.fna&oh=00_AfCVF83suiC0WUfTjCYwHFlJpuNVW5Ka-T0BrVrukrNZgA&oe=6458AF8D', alt='...')
-                            h4 Parveen Anand
+                            h4 Jhon Acevedo
                             p.text-muted Lead Developer
                             a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Parveen Anand Twitter Profile')
                                 i.fab.fa-twitter
