--- a/src/pug/includes/portfolio-modal-1.pug
+++ b/src/pug/includes/portfolio-modal-1.pug
@@ -9,17 +9,17 @@
                     .col-lg-8
                         .modal-body
                             // Project details
-                            h2.text-uppercase Game
-                            p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
+                            h2.text-uppercase Thanatos
+                            p.item-intro.text-muted VideoGame
                             img.img-fluid.d-block.mx-auto(src='https://images.unsplash.com/photo-1593118247619-e2d6f056869e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80', alt='...')
-                            p Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!
+                            p Acción, aventura, un mundo en guerra y seres de otro planeta, ¿qué es lo que está ocurriendo en el mundo de Petrov para que lo que experimenta no sea la conquista de una ciudad como cualquier otra? La tierra estará envuelta en el conflicto más descabellado y cruento que hayan visto las tierras de Stanislav, donde fuerzas más grandes que reyes o emperadores se verán absorbidas de manera irreversible a las luchas por estar en el bando ganador.
                             ul.list-inline
                                 li
                                     strong Client:
                                     | Threads
                                 li
                                     strong Category:
-                                    | Illustration
+                                    | Desarrollo de juegos
                             button.btn.btn-primary.btn-xl.text-uppercase(data-bs-dismiss='modal', type='button')
                                 i.fas.fa-xmark.me-1
-                                | Close Project
+                                | Cerrar Proyecto
