--- a/src/pug/includes/portfolio-modal-2.pug
+++ b/src/pug/includes/portfolio-modal-2.pug
@@ -9,17 +9,17 @@
                     .col-lg-8
                         .modal-body
                             // Project details
-                            h2.text-uppercase Gym
-                            p.item-intro.text-muted Lorem ipsum dolor sit amet consectetur.
+                            h2.text-uppercase InExtremis
+                            p.item-intro.text-muted Gym
                             img.img-fluid.d-block.mx-auto(src='https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80', alt='...')
-                            p Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!
+                            p Es una tendencia ascendente que las personas busquemos cuidar nuestra imagen más allá de una apariencia, gimnasios se crean en todas partes con el objetivo de que las personas saquen sus mejores versiones de sí mismas. Pero, ¿quién saca la mejor versión de esos gimnasios?; InExtremis es una herramienta que no acepta los errores para entregar el mejor servicio da igual a qué gimnasio asistas.Encontramos los errores financieros, capacitamos los entrenadores descuidados y mal preparados, mejoramos la imagen pública, orientamos a sus propietarios y llevamos de la mano a sus asociados. Un environment completo, un estilo de vida estoico donde prima la disciplina y las ganas de superar nuestras limitantes, InExtremis.
                             ul.list-inline
                                 li
                                     strong Client:
                                     | Explore
                                 li
                                     strong Category:
-                                    | Graphic Design
+                                    | Negocios
                             button.btn.btn-primary.btn-xl.text-uppercase(data-bs-dismiss='modal', type='button')
                                 i.fas.fa-xmark.me-1
-                                | Close Project
+                                | Cerrar Proyecto
