--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -16,6 +16,7 @@ header.masthead {
     .masthead-subheading {
         font-size: 1.5rem;
         font-style: italic;
+        font-weight: bold;
         line-height: 1.5rem;
         margin-bottom: 25px;
         font-family: $subheadings-font-family;
@@ -36,8 +37,9 @@ header.masthead {
         padding-bottom: 12.5rem;
 
         .masthead-subheading {
-            font-size: 2.25rem;
+            font-size: 3.25rem;
             font-style: italic;
+            font-weight: bold;
             line-height: 2.25rem;
             margin-bottom: 2rem;
         }
