--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -235,7 +235,7 @@ html(lang='en')
                                 // Name input
                                 input#name.form-control(
                                     type='text',
-                                    placeholder='Your Name *',
+                                    placeholder='Tu nombre *',
                                     data-sb-validations='required'
                                 )
                                 .invalid-feedback(data-sb-feedback='name:required')
@@ -246,7 +246,7 @@ html(lang='en')
                                 // Email address input
                                 input#email.form-control(
                                     type='email',
-                                    placeholder='Your Email *',
+                                    placeholder='Tu Email *',
                                     data-sb-validations='required,email'
                                 )
                                 .invalid-feedback(data-sb-feedback='email:required')
@@ -259,7 +259,7 @@ html(lang='en')
                                 // Phone number input
                                 input#phone.form-control(
                                     type='tel',
-                                    placeholder='Your Phone *',
+                                    placeholder='Tu número *',
                                     data-sb-validations='required'
                                 )
                                 .invalid-feedback(data-sb-feedback='phone:required')
@@ -270,7 +270,7 @@ html(lang='en')
 
                                 // Message input
                                 textarea#message.form-control(
-                                    placeholder='Your Message *',
+                                    placeholder='Tu mensaje *',
                                     data-sb-validations='required'
                                 )
                                 .invalid-feedback(data-sb-feedback='message:required')
