--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -89,7 +89,7 @@ html(lang='en')
                                 img.img-fluid(src='https://images.unsplash.com/photo-1593118247619-e2d6f056869e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80', alt='...')
                             .portfolio-caption
                                 .portfolio-caption-heading Thanatos
-                                .portfolio-caption-subheading.text-muted Games
+                                .portfolio-caption-subheading.text-muted VideoGames
                     .col-lg-4.col-sm-6.mb-4
                         // Portfolio item 2
                         .portfolio-item
