changes assets && index && includes

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Agency - Start Bootstrap Theme
+        title AdvanCore
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -86,10 +86,10 @@ html(lang='en')
                                 .portfolio-hover
                                     .portfolio-hover-content
                                         i.fas.fa-plus.fa-3x
-                                img.img-fluid(src='https://images.unsplash.com/photo-1593118247619-e2d6f056869e?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80', alt='...')
+                                img.img-fluid(src='assets/img/custom/portfolio/game.jpg', alt='Thanatos game')
                             .portfolio-caption
                                 .portfolio-caption-heading Thanatos
-                                .portfolio-caption-subheading.text-muted Games
+                                .portfolio-caption-subheading.text-muted VideoGames
                     .col-lg-4.col-sm-6.mb-4
                         // Portfolio item 2
                         .portfolio-item
@@ -97,7 +97,7 @@ html(lang='en')
                                 .portfolio-hover
                                     .portfolio-hover-content
                                         i.fas.fa-plus.fa-3x
-                                img.img-fluid(src='https://images.unsplash.com/photo-1517836357463-d25dfeac3438?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80', alt='...')
+                                img.img-fluid(src='assets/img/custom/portfolio/gym.jpg', alt='InExtremis Gym')
                             .portfolio-caption
                                 .portfolio-caption-heading InExtremis
                                 .portfolio-caption-subheading.text-muted Gym
@@ -108,7 +108,7 @@ html(lang='en')
                                 .portfolio-hover
                                     .portfolio-hover-content
                                         i.fas.fa-plus.fa-3x
-                                img.img-fluid(src='assets/img/portfolio/3.jpg', alt='...')
+                                img.img-fluid(src='assets/img/custom/portfolio/safejob.jpg', alt='SafeJob')
                             .portfolio-caption
                                 .portfolio-caption-heading SafeJob
                                 .portfolio-caption-subheading.text-muted Bussines
@@ -118,7 +118,7 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase Nosotros
-                    h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+                    h3.section-subheading.text-muted Línea de tiempo AdvanCore
                 ul.timeline
                     li
                         .timeline-image
@@ -135,7 +135,7 @@ html(lang='en')
                             img.rounded-circle.img-fluid(src='assets/img/about/2.jpg', alt='...')
                         .timeline-panel
                             .timeline-heading
-                                h4 March 2011
+                                h4 2023
                                 h4.subheading InExtremis y primeros vistazos de Thanatos
                             .timeline-body
                                 p.text-muted
@@ -154,48 +154,37 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase Nuestro increíble equipo
-                    h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+                    h3.section-subheading.text-muted Pilares que hacen realidad los proyectos
                 .row
-                    .col-lg-4
+                    .col-lg-6
                         .team-member
-                            img.mx-auto.rounded-circle(src='https://scontent.fbog20-2.fna.fbcdn.net/v/t39.30808-6/315019908_109592198631856_5884267608688461482_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_eui2=AeH6cO_QTwRCrc3Pd3CEFHZYrsjL9W7BYb2uyMv1bsFhvQqTPdQEgPt1pFXAAExIj3fQC3oqf7TuQzMZ719V-RHe&_nc_ohc=ZD7Av_uqIB4AX_031Wi&_nc_zt=23&_nc_ht=scontent.fbog20-2.fna&oh=00_AfBlSwWyhPY-sFNatWS1JXaYrcr1Q9MPWEYSZCltijWUsw&oe=6460988D', alt='...')
+                            img.mx-auto.rounded-circle(src='assets/img/team/3.jpg', alt='...')
                             h4 Jhon Acevedo
                             p.text-muted Lead Developer
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Parveen Anand Twitter Profile')
-                                i.fab.fa-twitter
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Parveen Anand Facebook Profile')
-                                i.fab.fa-facebook-f
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Parveen Anand LinkedIn Profile')
-                                i.fab.fa-linkedin-in
-                    .col-lg-4
+                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/akiradechill/', target="_blank", aria-label='Parveen Anand Instagram Profile')
+                                i.fab.fa-instagram
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Parveen Anand Facebook Profile')
+                            //-     i.fab.fa-facebook-f
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Parveen Anand LinkedIn Profile')
+                            //-     i.fab.fa-linkedin-in
+                    .col-lg-6
                         .team-member
                             img.mx-auto.rounded-circle(src='assets/img/team/3.jpg', alt='...')
                             h4 David Ovallos
                             p.text-muted CEO
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Twitter Profile')
-                                i.fab.fa-twitter
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
-                                i.fab.fa-facebook-f
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen LinkedIn Profile')
-                                i.fab.fa-linkedin-in
-                    .col-lg-4
-                        .team-member
-                            img.mx-auto.rounded-circle(src='assets/img/team/2.jpg', alt='...')
-                            h4 Chica sexy
-                            p.text-muted Lead Designer
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Larry Parker Twitter Profile')
-                                i.fab.fa-twitter
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Larry Parker Facebook Profile')
-                                i.fab.fa-facebook-f
-                            a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Larry Parker LinkedIn Profile')
-                                i.fab.fa-linkedin-in
+                            a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/jhoncarlosam', target="_blank", aria-label='Diana Petersen Instagram Profile')
+                                i.fab.fa-instagram
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen Facebook Profile')
+                            //-     i.fab.fa-facebook-f
+                            //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Diana Petersen LinkedIn Profile')
+                            //-     i.fab.fa-linkedin-in
                 .row
                     .col-lg-8.mx-auto.text-center
                         p.large.text-muted
-                            | Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.
+                            | Si quieres ser parte de nuestro equipo no dudes en ponerte en contacto con nosotros, juntos podemos lograr grandes cosas.
 
         // Clients
-        div.py-5
+        //- div.py-5
             .container
                 .row.align-items-center
                     .col-md-3.col-sm-6.my-3
@@ -216,7 +205,7 @@ html(lang='en')
             .container
                 .text-center
                     h2.section-heading.text-uppercase Contáctanos
-                    h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
+                    //- h3.section-subheading.text-muted Lorem ipsum dolor sit amet consectetur.
 
                 // * * * * * * * * * * * * * * *
                 // * * SB Forms Contact Form * *
@@ -307,14 +296,14 @@ html(lang='en')
                     .col-lg-4.text-lg-start
                         | Copyright &copy; AdvanCore Website 2023
                     .col-lg-4.my-3.my-lg-0
-                        a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Twitter')
-                            i.fab.fa-twitter
-                        a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Facebook')
-                            i.fab.fa-facebook-f
-                        a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='LinkedIn')
-                            i.fab.fa-linkedin-in
+                        a.btn.btn-dark.btn-social.mx-2(href='https://www.instagram.com/thanatos/', target="_blank", aria-label='Instagram')
+                            i.fab.fa-instagram
+                        //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='Facebook')
+                        //-     i.fab.fa-facebook-f
+                        //- a.btn.btn-dark.btn-social.mx-2(href='#!', aria-label='LinkedIn')
+                        //-     i.fab.fa-linkedin-in
                     .col-lg-4.text-lg-end
-                        a.link-dark.text-decoration-none.me-3(href='#!') Privacy Policy
+                        //- a.link-dark.text-decoration-none.me-3(href='#!') Privacy Policy
                         a.link-dark.text-decoration-none(href='#!') Terms of Use
 
         // Portfolio Modals
